--- a/Assets/_Root/Scripts/UserControlSystem/UI/View/View.asmdef
+++ b/Assets/_Root/Scripts/UserControlSystem/UI/View/View.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "View"
+    "name": "View",
+    "rootNamespace": "",
+    "references": [
+        "GUID:7659b4ddf1cf03848a128992ac075985"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
