--- a/Assets/_Root/Scripts/Core/Core.asmdef
+++ b/Assets/_Root/Scripts/Core/Core.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:7659b4ddf1cf03848a128992ac075985",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:96a9bf14cd64b2049abed679d7767799"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
