--- a/Assets/_Root/Scripts/Abstractions/Abstractions.asmdef
+++ b/Assets/_Root/Scripts/Abstractions/Abstractions.asmdef
@@ -2,7 +2,8 @@
     "name": "Abstractions",
     "rootNamespace": "",
     "references": [
-        "GUID:96a9bf14cd64b2049abed679d7767799"
+        "GUID:96a9bf14cd64b2049abed679d7767799",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
