--- a/Assets/_Root/Scripts/UserControlSystem/UI/Model/UIModel.asmdef
+++ b/Assets/_Root/Scripts/UserControlSystem/UI/Model/UIModel.asmdef
@@ -5,7 +5,8 @@
         "GUID:7659b4ddf1cf03848a128992ac075985",
         "GUID:d719fa367d5b3af4d9e177bfc872f22c",
         "GUID:96a9bf14cd64b2049abed679d7767799",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
