--- a/Assets/_Root/Scripts/UserControlSystem/UI/View/UIView.asmdef
+++ b/Assets/_Root/Scripts/UserControlSystem/UI/View/UIView.asmdef
@@ -2,7 +2,10 @@
     "name": "UIView",
     "rootNamespace": "",
     "references": [
-        "GUID:7659b4ddf1cf03848a128992ac075985"
+        "GUID:7659b4ddf1cf03848a128992ac075985",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
